--- a/analysis/clustering/initial_clustering/DataPreProcessed.ipynb
+++ b/analysis/clustering/initial_clustering/DataPreProcessed.ipynb
@@ -1753,7 +1753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I-3 Others with translocations count >2 + complex(frequency >2)"
+    "## I-3 Others with translocations count >=2 + complex(frequency >2)"
    ]
   },
   {
