--- a/analysis/prognosis/InitialPrognosis/Models_python.ipynb
+++ b/analysis/prognosis/InitialPrognosis/Models_python.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas\n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import ShuffleSplit, GridSearchCV\n",
     "\n",
@@ -22,51 +22,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_final = pd.read_table(\"df_prognosis_features_ready.tsv\")\n",
-    "x = df_final.iloc[:,1:177]\n",
+    "#x = df_final.iloc[:,1:177]\n",
+    "x = df_final.iloc[:,1:84]\n",
     "y = np.array(list(zip(df_final.os_status, df_final.os)),dtype=[('Status', '?'), ('Survival_in_days', '<f8')])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'alpha': array([1.e-07, 1.e-06, 1.e-05, 1.e-04, 1.e-03, 1.e-02, 1.e-01, 1.e+00,\n",
-       "        1.e+01])}"
+       "{'alpha': array([1.00000000e-06, 1.25892541e-06, 1.58489319e-06, 1.99526231e-06,\n",
+       "        2.51188643e-06, 3.16227766e-06, 3.98107171e-06, 5.01187234e-06,\n",
+       "        6.30957344e-06, 7.94328235e-06, 1.00000000e-05, 1.25892541e-05,\n",
+       "        1.58489319e-05, 1.99526231e-05, 2.51188643e-05, 3.16227766e-05,\n",
+       "        3.98107171e-05, 5.01187234e-05, 6.30957344e-05, 7.94328235e-05])}"
       ]
      },
-     "execution_count": 387,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#help(FastSurvivalSVM)\n",
-    "ram_grid = {'alpha': 10. ** np.arange(-7, 2, 1)}\n",
-    "ram_grid"
+    "{'alpha': 10. ** np.arange(-6, -4, 0.1)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "estimator = FastSurvivalSVM(optimizer=\"rbtree\", max_iter=1000, tol=1e-6, random_state=17)\n",
-    "estimator = FastKernelSurvivalSVM(optimizer=\"rbtree\", kernel=\"precomputed\", random_state=0)"
+    "#estimator = FastKernelSurvivalSVM(optimizer=\"rbtree\", kernel=\"precomputed\", random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,12 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#param_grid = {'alpha': 10. ** np.arange(-10, -3, 2)}\n",
-    "param_grid = {'alpha': 10. ** np.arange(-10, -3, 0.2)}\n",
+    "param_grid = {'alpha': 10. ** np.arange(-6, -4, 0.1)}\n",
+    "#param_grid = {'alpha': 10. ** np.arange(-10, -3, 0.2)}\n",
     "#cv = ShuffleSplit(n_splits=5, test_size=0.5, random_state=0)\n",
     "cv = ShuffleSplit(n_splits=10,random_state=17)\n",
     "gcv = GridSearchCV(estimator, param_grid, scoring=score_survival_model,\n",
@@ -93,28 +95,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
-    "gcv = gcv.fit(clinical_kernel(x),y)\n",
-    "#gcv = gcv.fit(x,y)"
+    "gcv = gcv.fit(x,y)\n",
+    "#gcv = gcv.fit(clinical_kernel(x),y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7072491659202412"
+       "0.6464302951335703"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,16 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'alpha': 9.999999999999591e-06}"
+       "{'alpha': 7.943282347242757e-06}"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
