--- a/analysis/prognosis/InitialPrognosis/Survival_deeplearning.ipynb
+++ b/analysis/prognosis/InitialPrognosis/Survival_deeplearning.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import sys\n",
     "sys.path.append('../deepsurv')\n",
-    "#import deepsurv\n",
+    "import deepsurv\n",
     "\n",
     "#from deepsurv_logger import DeepSurvLogger, TensorboardLogger\n",
     "import utils\n",
@@ -121,18 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'deepsurv' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-995a95e097eb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeepsurv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDeepSurv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mhyperparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# DeepSurv can now leverage TensorBoard to monitor training and validation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# This section of code is optional. If you don't want to use the tensorboard logger\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Uncomment the below line, and comment out the other three lines:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'deepsurv' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-05-13 18:35:32,795 - Training step 0/500   |                         | - loss: 23.6411 - ci: 0.4541\n",
+      "2019-05-13 18:35:32,795 - Training step 0/500   |                         | - loss: 23.6411 - ci: 0.4541\n",
+      "2019-05-13 18:35:58,605 - Training step 250/500 |************             | - loss: 12.9231 - ci: 0.4487\n",
+      "2019-05-13 18:35:58,605 - Training step 250/500 |************             | - loss: 12.9231 - ci: 0.4487\n",
+      "2019-05-13 18:36:26,265 - Finished Training with 500 iterations in 53.66s\n",
+      "2019-05-13 18:36:26,265 - Finished Training with 500 iterations in 53.66s\n"
      ]
     }
    ],
@@ -161,31 +162,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method train in module deepsurv.deep_surv:\n",
+      "\n",
+      "train(train_data, valid_data=None, n_epochs=500, validation_frequency=250, patience=2000, improvement_threshold=0.99999, patience_increase=2, logger=None, update_fn=<function nesterov_momentum at 0x1c2a0b0048>, verbose=True, **kwargs) method of deepsurv.deep_surv.DeepSurv instance\n",
+      "    Trains a DeepSurv network on the provided training data and evalutes\n",
+      "        it on the validation data.\n",
+      "    \n",
+      "    Parameters:\n",
+      "        train_data: dictionary with the following keys:\n",
+      "            'x' : (n,d) array of observations (dtype = float32).\n",
+      "            't' : (n) array of observed time events (dtype = float32).\n",
+      "            'e' : (n) array of observed time indicators (dtype = int32).\n",
+      "        valid_data: optional. A dictionary with the following keys:\n",
+      "            'x' : (n,d) array of observations.\n",
+      "            't' : (n) array of observed time events.\n",
+      "            'e' : (n) array of observed time indicators.\n",
+      "        standardize: True or False. Set the offset and scale of\n",
+      "            standardization layey to the mean and standard deviation of the\n",
+      "            training data.\n",
+      "        n_epochs: integer for the maximum number of epochs the network will\n",
+      "            train for.\n",
+      "        validation_frequency: how often the network computes the validation\n",
+      "            metrics. Decreasing validation_frequency increases training speed.\n",
+      "        patience: minimum number of epochs to train for. Once patience is\n",
+      "            reached, looks at validation improvement to increase patience or\n",
+      "            early stop.\n",
+      "        improvement_threshold: percentage of improvement needed to increase\n",
+      "            patience.\n",
+      "        patience_increase: multiplier to patience if threshold is reached.\n",
+      "        logger: None or DeepSurvLogger.\n",
+      "        update_fn: lasagne update function for training.\n",
+      "            Default: lasagne.updates.nesterov_momentum\n",
+      "        **kwargs: additional parameters to provide _get_train_valid_fn.\n",
+      "            Parameters used to provide configurations to update_fn.\n",
+      "    \n",
+      "    Returns:\n",
+      "        metrics: a dictionary of training metrics that include:\n",
+      "            'train': a list of loss values for each training epoch\n",
+      "            'train_ci': a list of C-indices for each training epoch\n",
+      "            'best_params': a list of numpy arrays containing the parameters\n",
+      "                when the network had the best validation loss\n",
+      "            'best_params_idx': the epoch at which best_params was found\n",
+      "        If valid_data is provided, the metrics also contain:\n",
+      "            'valid': a list of validation loss values for each validation frequency\n",
+      "            'valid_ci': a list of validation C-indiices for each validation frequency\n",
+      "            'best_validation_loss': the best validation loss found during training\n",
+      "            'best_valid_ci': the max validation C-index found during training\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(model.train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['lr', 'loss', 'c-index', 'best_valid_loss', 'best_params', 'best_params_idx'])"
+       "[(0, 0.5077454603888799), (250, 0.5717820986662382)]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metrics.keys()"
+    "metrics['valid_c-index']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(10.92700923)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "metrics['best_params']"
+    "metrics['best_valid_loss']"
    ]
   },
   {
