--- a/analysis/prognosis/InitialPrognosis/Models.ipynb
+++ b/analysis/prognosis/InitialPrognosis/Models.ipynb
@@ -325,76 +325,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"all_features.tsv\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
       "[1] \"DONE\"\n",
-      "[1] \"eln_clin.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"eln_clin_demo.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"eln_clin_demo_cyto.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"eln_clin_demo_gen.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"eln_clin_demo_cyto_gen.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"eln_clin_demo_comp.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"eln_cyto_gen.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"eln_cyto_gen_comp.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"eln_cyto_comp.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"eln_gen_comp.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"clin_demo.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"clin_demo_cyto.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"clin_demo_gen.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"clin_demo_cyto_gen.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"clin_demo_comp.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"cyto_gen.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"cyto_gen_comp.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"cyto_comp.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"gen_comp.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"clin_demo_cyto_gen_comp.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"gen.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"cyto.tsv\"\n",
-      "[1] \"DONE\"\n",
-      "[1] \"comp.tsv\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
       "[1] \"DONE\"\n"
      ]
     }
    ],
    "source": [
     "prognosis_features<- list(all_features=all_features,eln_clin=eln_clin,eln_clin_demo=eln_clin_demo,\n",
-    "    eln_clin_demo_cyto=eln_clin_demo_cyto,eln_clin_demo_gen=eln_clin_demo_gen,\n",
-    "    eln_clin_demo_cyto_gen=eln_clin_demo_cyto_gen,eln_clin_demo_comp=eln_clin_demo_comp,\n",
-    "    eln_cyto_gen=eln_cyto_gen,eln_cyto_gen_comp=eln_cyto_gen_comp,eln_cyto_comp=eln_cyto_comp,\n",
-    "    eln_gen_comp=eln_gen_comp,clin_demo=clin_demo,clin_demo_cyto=clin_demo_cyto,clin_demo_gen=clin_demo_gen,\n",
-    "    clin_demo_cyto_gen=clin_demo_cyto_gen,clin_demo_comp=clin_demo_comp,cyto_gen=cyto_gen,cyto_gen_comp=cyto_gen_comp,\n",
-    "    cyto_comp=cyto_comp,gen_comp=gen_comp,clin_demo_cyto_gen_comp=clin_demo_cyto_gen_comp,gen=gen,cyto=cyto,comp=comp)\n",
+    "    eln_clin_demo_cyto=eln_clin_demo_cyto,eln_clin_demo_gen=eln_clin_demo_gen)\n",
     "###--------------------------------------------------\n",
     "y <- data.matrix(df_final[,c(\"os\",\"os_status\")])\n",
     "\n",
-    "predictors <- c(rep(list(predictorGLM),20),rep(list(predictorRF),15),predictorBoost,predictorRFX)\n",
+    "#predictors <- c(rep(list(predictorGLM),20),rep(list(predictorRF),15),predictorBoost,predictorRFX)\n",
+    "predictors <- c(predictorBoost,predictorRFX)\n",
+    "prognosis_features<- list(eln_clin=eln_clin,eln_clin_demo=eln_clin_demo)\n",
     "str_predictors <-c(rep(\"CoxGLM\",20),rep(\"RFS\",105),\"CoxBoost\",\"RFX\")\n",
     "l_alpha <-seq(0.05,1,0.05)\n",
     "l_ntree <- seq(100,1500,100)\n",
@@ -402,7 +357,8 @@
     "nodesize <- c(5,10,15,20,30,40,50)\n",
     "for (i in 1:length(prognosis_features)){\n",
     "    x <- data.matrix(df_final[,prognosis_features[[i]]])\n",
-    "    print(paste(names(prognosis_features)[i],\".tsv\",sep=\"\"))\n",
+    "launch_prognosis(x=x,y=y,predictors=predictors,str_predictors=str_predictors,l_alpha=l_alpha,\n",
+    "                l_ntree=l_ntree,mc.cores=mc.cores,nodesize=nodesize)\n",
     "    print(\"DONE\")\n",
     "    }"
    ]
