--- a/analysis/clustering/finalization_clustering/ELNClassification.ipynb
+++ b/analysis/clustering/finalization_clustering/ELNClassification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,13 @@
     "from IPython.display import display\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=DeprecationWarning) \n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +160,7 @@
        "(2150, 521)"
       ]
      },
-     "execution_count": 557,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +195,7 @@
        "(2150, 522)"
       ]
      },
-     "execution_count": 558,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +253,7 @@
     "                  ]\n",
     "                     ,inplace=True)\n",
     "l=[]\n",
-    "for row in c.index:\n",
+    "for row in tmp.index:\n",
     "    l.append(list(tmp.ix[row][tmp.ix[row]==1].index))"
    ]
   },
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,6 +296,135 @@
     "df_diff.loc[(df_diff['Classification rules'].isnull()) & (df_diff.NPM1 == 0) & (df_diff.ITD == 0),'Classification rules'] ='NPM1 == 0 and ITD == 0'\n",
     "df_diff.loc[(df_diff['Classification rules'].isnull()) & (df_diff.NPM1 == 1) & (df_diff.ITD == 1),'Classification rules'] ='NPM1 == 1 and ITD == 1'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(67, 524)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>initial_eln_2017</th>\n",
+       "      <th>eln_2017</th>\n",
+       "      <th>positive mutation</th>\n",
+       "      <th>Classification rules</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>data_pd</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PD20320a</th>\n",
+       "      <td>intermediate</td>\n",
+       "      <td>favorable</td>\n",
+       "      <td>[FLT3_ITD, NPM1, TET2]</td>\n",
+       "      <td>NPM1 == 1 and ITD == 0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PD20312a</th>\n",
+       "      <td>intermediate</td>\n",
+       "      <td>favorable</td>\n",
+       "      <td>[CEBPA_mono, FLT3_ITD, NPM1, TET2]</td>\n",
+       "      <td>NPM1 == 1 and ITD == 0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PD20306a</th>\n",
+       "      <td>adverse</td>\n",
+       "      <td>intermediate</td>\n",
+       "      <td>[DNMT3A, FLT3_ITD]</td>\n",
+       "      <td>NPM1 == 0 and ITD == 0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PD20253a</th>\n",
+       "      <td>intermediate</td>\n",
+       "      <td>favorable</td>\n",
+       "      <td>[DNMT3A, FLT3_ITD, NPM1, NRAS_p.G12_13, TET2]</td>\n",
+       "      <td>NPM1 == 1 and ITD == 0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PD20251c</th>\n",
+       "      <td>adverse</td>\n",
+       "      <td>intermediate</td>\n",
+       "      <td>[DNMT3A, FLT3_ITD, IDH2_p.R140]</td>\n",
+       "      <td>NPM1 == 0 and ITD == 0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         initial_eln_2017      eln_2017  \\\n",
+       "data_pd                                   \n",
+       "PD20320a     intermediate     favorable   \n",
+       "PD20312a     intermediate     favorable   \n",
+       "PD20306a          adverse  intermediate   \n",
+       "PD20253a     intermediate     favorable   \n",
+       "PD20251c          adverse  intermediate   \n",
+       "\n",
+       "                                      positive mutation  \\\n",
+       "data_pd                                                   \n",
+       "PD20320a                         [FLT3_ITD, NPM1, TET2]   \n",
+       "PD20312a             [CEBPA_mono, FLT3_ITD, NPM1, TET2]   \n",
+       "PD20306a                             [DNMT3A, FLT3_ITD]   \n",
+       "PD20253a  [DNMT3A, FLT3_ITD, NPM1, NRAS_p.G12_13, TET2]   \n",
+       "PD20251c                [DNMT3A, FLT3_ITD, IDH2_p.R140]   \n",
+       "\n",
+       "            Classification rules  \n",
+       "data_pd                           \n",
+       "PD20320a  NPM1 == 1 and ITD == 0  \n",
+       "PD20312a  NPM1 == 1 and ITD == 0  \n",
+       "PD20306a  NPM1 == 0 and ITD == 0  \n",
+       "PD20253a  NPM1 == 1 and ITD == 0  \n",
+       "PD20251c  NPM1 == 0 and ITD == 0  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(df_diff.shape)\n",
+    "df_diff[['initial_eln_2017','eln_2017','positive mutation','Classification rules']].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
