--- a/analysis/prognosis/InitialPrognosis/Survival_models_R.ipynb
+++ b/analysis/prognosis/InitialPrognosis/Survival_models_R.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,15 +325,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1] \"q\"\n",
+      "[1] \"DONE\"\n",
       "[1] \"start CV\"\n",
       "[1] \"start CV\"\n",
+      "[1] \"DONE\"\n",
       "[1] \"DONE\"\n",
       "[1] \"start CV\"\n",
       "[1] \"start CV\"\n",
@@ -342,25 +345,24 @@
     }
    ],
    "source": [
-    "prognosis_features<- list(all_features=all_features,eln_clin=eln_clin,eln_clin_demo=eln_clin_demo,\n",
-    "    eln_clin_demo_cyto=eln_clin_demo_cyto,eln_clin_demo_gen=eln_clin_demo_gen)\n",
-    "###--------------------------------------------------\n",
-    "y <- data.matrix(df_final[,c(\"os\",\"os_status\")])\n",
     "\n",
-    "#predictors <- c(rep(list(predictorGLM),20),rep(list(predictorRF),15),predictorBoost,predictorRFX)\n",
-    "predictors <- c(predictorBoost,predictorRFX)\n",
-    "prognosis_features<- list(eln_clin=eln_clin,eln_clin_demo=eln_clin_demo)\n",
-    "str_predictors <-c(rep(\"CoxGLM\",20),rep(\"RFS\",105),\"CoxBoost\",\"RFX\")\n",
-    "l_alpha <-seq(0.05,1,0.05)\n",
-    "l_ntree <- seq(100,1500,100)\n",
-    "mc.cores <- 8\n",
-    "nodesize <- c(5,10,15,20,30,40,50)\n",
+    "#predictors <- c(predictorBoost,predictorRFX)\n",
+    "prognosis_features<- list(comp=comp,clin_demo=clin_demo)\n",
+    "str_predictors <-c(rep(\"RFS\",24))\n",
+    "l_alpha <-seq(0.1,1,0.1)\n",
+    "l_ntree <- seq(5,15,2)\n",
+    "l_ntree <- seq(5,6,1)\n",
+    "mc.cores <- 32\n",
+    "nodesize <- c(1,2,3,4)\n",
+    "nodesize <- c(1,2)\n",
+    "print ('q')\n",
     "for (i in 1:length(prognosis_features)){\n",
+    "    print(\"DONE\")\n",
     "    x <- data.matrix(df_final[,prognosis_features[[i]]])\n",
-    "launch_prognosis(x=x,y=y,predictors=predictors,str_predictors=str_predictors,l_alpha=l_alpha,\n",
+    "        launch_prognosis(x=x,y=y,predictors=predictors,str_predictors=str_predictors,l_alpha=l_alpha,\n",
     "                l_ntree=l_ntree,mc.cores=mc.cores,nodesize=nodesize)\n",
     "    print(\"DONE\")\n",
-    "    }"
+    "    }\n"
    ]
   },
   {
@@ -382,19 +384,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "    CoxGLM_         CoxGLM_.1     \n",
-       " Min.   :0.6851   Min.   :0.6841  \n",
-       " 1st Qu.:0.6937   1st Qu.:0.6932  \n",
-       " Median :0.7032   Median :0.7018  \n",
-       " Mean   :0.7039   Mean   :0.7033  \n",
-       " 3rd Qu.:0.7110   3rd Qu.:0.7109  \n",
-       " Max.   :0.7301   Max.   :0.7306  "
+       "   CoxGLM_0.1       CoxGLM_0.2       CoxGLM_0.3       CoxGLM_0.4    \n",
+       " Min.   :0.6904   Min.   :0.6913   Min.   :0.6917   Min.   :0.6915  \n",
+       " 1st Qu.:0.7030   1st Qu.:0.7054   1st Qu.:0.7062   1st Qu.:0.7065  \n",
+       " Median :0.7106   Median :0.7135   Median :0.7149   Median :0.7147  \n",
+       " Mean   :0.7120   Mean   :0.7135   Mean   :0.7143   Mean   :0.7145  \n",
+       " 3rd Qu.:0.7187   3rd Qu.:0.7214   3rd Qu.:0.7224   3rd Qu.:0.7225  \n",
+       " Max.   :0.7357   Max.   :0.7371   Max.   :0.7389   Max.   :0.7395  \n",
+       "   CoxGLM_0.5       CoxGLM_0.6       CoxGLM_0.7       CoxGLM_0.8    \n",
+       " Min.   :0.6923   Min.   :0.6922   Min.   :0.6921   Min.   :0.6920  \n",
+       " 1st Qu.:0.7069   1st Qu.:0.7072   1st Qu.:0.7073   1st Qu.:0.7074  \n",
+       " Median :0.7155   Median :0.7149   Median :0.7148   Median :0.7150  \n",
+       " Mean   :0.7147   Mean   :0.7146   Mean   :0.7147   Mean   :0.7147  \n",
+       " 3rd Qu.:0.7225   3rd Qu.:0.7230   3rd Qu.:0.7231   3rd Qu.:0.7231  \n",
+       " Max.   :0.7401   Max.   :0.7403   Max.   :0.7409   Max.   :0.7411  \n",
+       "   CoxGLM_0.9        CoxGLM_1        RFS_500_5        RFS_500_15    \n",
+       " Min.   :0.6922   Min.   :0.6921   Min.   :0.7141   Min.   :0.7123  \n",
+       " 1st Qu.:0.7076   1st Qu.:0.7077   1st Qu.:0.7208   1st Qu.:0.7220  \n",
+       " Median :0.7149   Median :0.7151   Median :0.7294   Median :0.7294  \n",
+       " Mean   :0.7148   Mean   :0.7147   Mean   :0.7285   Mean   :0.7284  \n",
+       " 3rd Qu.:0.7231   3rd Qu.:0.7231   3rd Qu.:0.7346   3rd Qu.:0.7352  \n",
+       " Max.   :0.7412   Max.   :0.7413   Max.   :0.7478   Max.   :0.7492  \n",
+       "   RFS_500_25       RFS_500_50       RFS_700_5        RFS_700_15    \n",
+       " Min.   :0.7110   Min.   :0.7095   Min.   :0.7133   Min.   :0.7126  \n",
+       " 1st Qu.:0.7213   1st Qu.:0.7180   1st Qu.:0.7203   1st Qu.:0.7212  \n",
+       " Median :0.7270   Median :0.7253   Median :0.7291   Median :0.7292  \n",
+       " Mean   :0.7276   Mean   :0.7258   Mean   :0.7280   Mean   :0.7286  \n",
+       " 3rd Qu.:0.7353   3rd Qu.:0.7347   3rd Qu.:0.7344   3rd Qu.:0.7346  \n",
+       " Max.   :0.7467   Max.   :0.7462   Max.   :0.7498   Max.   :0.7481  \n",
+       "   RFS_700_25       RFS_700_50       RFS_900_5        RFS_900_15    \n",
+       " Min.   :0.7103   Min.   :0.7088   Min.   :0.7125   Min.   :0.7115  \n",
+       " 1st Qu.:0.7209   1st Qu.:0.7190   1st Qu.:0.7208   1st Qu.:0.7209  \n",
+       " Median :0.7277   Median :0.7253   Median :0.7289   Median :0.7282  \n",
+       " Mean   :0.7278   Mean   :0.7260   Mean   :0.7284   Mean   :0.7284  \n",
+       " 3rd Qu.:0.7342   3rd Qu.:0.7345   3rd Qu.:0.7343   3rd Qu.:0.7355  \n",
+       " Max.   :0.7489   Max.   :0.7479   Max.   :0.7493   Max.   :0.7476  \n",
+       "   RFS_900_25       RFS_900_50       RFS_1100_5      RFS_1100_15    \n",
+       " Min.   :0.7110   Min.   :0.7089   Min.   :0.7133   Min.   :0.7121  \n",
+       " 1st Qu.:0.7221   1st Qu.:0.7190   1st Qu.:0.7190   1st Qu.:0.7210  \n",
+       " Median :0.7285   Median :0.7260   Median :0.7279   Median :0.7285  \n",
+       " Mean   :0.7278   Mean   :0.7263   Mean   :0.7285   Mean   :0.7282  \n",
+       " 3rd Qu.:0.7348   3rd Qu.:0.7350   3rd Qu.:0.7339   3rd Qu.:0.7359  \n",
+       " Max.   :0.7482   Max.   :0.7475   Max.   :0.7502   Max.   :0.7483  \n",
+       "  RFS_1100_25      RFS_1100_50       RFS_1300_5      RFS_1300_15    \n",
+       " Min.   :0.7110   Min.   :0.7095   Min.   :0.7131   Min.   :0.7112  \n",
+       " 1st Qu.:0.7212   1st Qu.:0.7185   1st Qu.:0.7196   1st Qu.:0.7223  \n",
+       " Median :0.7276   Median :0.7248   Median :0.7279   Median :0.7277  \n",
+       " Mean   :0.7280   Mean   :0.7261   Mean   :0.7286   Mean   :0.7285  \n",
+       " 3rd Qu.:0.7362   3rd Qu.:0.7352   3rd Qu.:0.7351   3rd Qu.:0.7346  \n",
+       " Max.   :0.7478   Max.   :0.7457   Max.   :0.7505   Max.   :0.7486  \n",
+       "  RFS_1300_25      RFS_1300_50       RFS_1500_5      RFS_1500_15    \n",
+       " Min.   :0.7111   Min.   :0.7095   Min.   :0.7136   Min.   :0.7119  \n",
+       " 1st Qu.:0.7208   1st Qu.:0.7184   1st Qu.:0.7191   1st Qu.:0.7220  \n",
+       " Median :0.7274   Median :0.7249   Median :0.7277   Median :0.7282  \n",
+       " Mean   :0.7279   Mean   :0.7262   Mean   :0.7285   Mean   :0.7284  \n",
+       " 3rd Qu.:0.7355   3rd Qu.:0.7345   3rd Qu.:0.7349   3rd Qu.:0.7362  \n",
+       " Max.   :0.7473   Max.   :0.7462   Max.   :0.7491   Max.   :0.7482  \n",
+       "  RFS_1500_25      RFS_1500_50       CoxBoost_           RFX_       \n",
+       " Min.   :0.7117   Min.   :0.7099   Min.   :0.6952   Min.   :0.6957  \n",
+       " 1st Qu.:0.7217   1st Qu.:0.7186   1st Qu.:0.7060   1st Qu.:0.7071  \n",
+       " Median :0.7278   Median :0.7251   Median :0.7115   Median :0.7139  \n",
+       " Mean   :0.7280   Mean   :0.7264   Mean   :0.7135   Mean   :0.7150  \n",
+       " 3rd Qu.:0.7357   3rd Qu.:0.7356   3rd Qu.:0.7182   3rd Qu.:0.7234  \n",
+       " Max.   :0.7478   Max.   :0.7460   Max.   :0.7424   Max.   :0.7395  "
       ]
      },
      "metadata": {},
@@ -402,7 +460,7 @@
     }
    ],
    "source": [
-    "summary(read.table(\"eln_clin_demo.tsv\",sep=\"\\t\"))"
+    "summary(read.table(\"all_features.tsv\",sep=\"\\t\"))"
    ]
   },
   {
@@ -452,6 +510,46 @@
    ],
    "source": [
     "seq(500,1500,200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>5</li>\n",
+       "\t<li>6</li>\n",
+       "\t<li>7</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 5\n",
+       "\\item 6\n",
+       "\\item 7\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 5\n",
+       "2. 6\n",
+       "3. 7\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 5 6 7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "seq(5,7,1)"
    ]
   },
   {
