--- a/analysis/prognosis/InitialPrognosis/Survival_models_R.ipynb
+++ b/analysis/prognosis/InitialPrognosis/Survival_models_R.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -457,10 +457,41 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>1</li>\n",
+       "\t<li>2</li>\n",
+       "\t<li>3</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 1\n",
+       "\\item 2\n",
+       "\\item 3\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 1\n",
+       "2. 2\n",
+       "3. 3\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 1 2 3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "summary(read.table(\"all_features.tsv\",sep=\"\\t\"))"
+    "summary(read.table(\"all_features.tsv\",sep=\"\\t\"))\n",
+    "1:3"
    ]
   },
   {
